[package]
name = "faster_paths"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 2

[profile.release]
debug = true

[dependencies]
serde_json = "1.0"
indicatif = {version = "0.17", features = ["rayon"]}
rayon = "1.8"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
ahash = "0.8.6"
bincode = "1.3.3"
radix-heap = "0.4.2"
itertools = "0.12.1"
keyed_priority_queue = "0.4.2"
dashmap = { version = "5.5.3", features = ["inline"] }
