[package]
name = "faster_paths"
version = "2.0.0"
edition = "2021"

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[dependencies]
serde_json = "1.0"
indicatif = {version = "0.17", features = ["rayon"]}
rayon = "1.8"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
ahash = "0.8.6"
bincode = "1.3.3"
itertools = "0.12.1"
fixedbitset = "0.5.7"
dary_heap = "0.3.6"
serde_with = "3.9.0"
