[package]
name = "faster_paths"
version = "2.0.0"
edition = "2021"

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[dependencies]
serde_json = "1.0"
indicatif = {version = "0.17", features = ["rayon"]}
rayon = "1.8"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
bincode = "1.3.3"
itertools = "0.12.1"
fixedbitset = "0.5.7"
serde_with = "3.9.0"
keyed_priority_queue = "0.4.2"
clap-verbosity-flag = "2.2.1"
log = "0.4.22"
env_logger = "0.11.5"
